<resources>
    <string name="app_name">MenuLateralLLMTestGPT4</string>
    <string name="title_activity_tela_login1">Tela_Cadastro1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="username_edit_text_description">Campo de texto para inserir nome de usuário ou e-mail</string>
    <string name="password_edit_text_description">Campo de texto para inserir senha</string>

    <string name="product_name">Nome do Produto</string>
    <string name="product_description">Descrição do Produto</string>
    <string name="product_price">R$ 99,99</string>
    <string name="add_to_cart">Adicionar ao Carrinho</string>
    <string name="add_to_favorites">Adicionar aos Favoritos</string>
    <string name="product_image">Imagem do Produto</string>

    <string name="product_image_description">Imagem do Produto</string>

    <string name="descricao_imagem_produto">Imagem do Produto</string>
    <string name="nome_produto_exemplo">Nome do Produto</string>
    <string name="preco_produto_exemplo">R$ 100,00</string>
    <string name="descricao_produto_exemplo">Descrição do Produto</string>
    <string name="botao_adicionar_carrinho">Adicionar ao Carrinho</string>
    <string name="botao_adicionar_favoritos">Adicionar aos Favoritos</string>
    <string name="descricao_botao_adicionar_carrinho">Adiciona este item ao carrinho de compras</string>
    <string name="descricao_botao_adicionar_favoritos">Adiciona este item aos favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_main">Formulário de Cadastro</string>
    <string name="button_submit">Enviar</string>
    <string name="button_cancel">Cancelar</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="user_name_label">Nome do Usuário</string>
    <!-- Outras informações do cabeçalho, se necessário -->

    <!-- Rótulos dos itens do menu lateral -->
    <string name="home_label">Página Inicial</string>
    <string name="promotions_label">Promoções</string>
    <string name="orders_label">Meus Pedidos</string>
    <string name="cart_label">Meu Carrinho</string>
    <string name="account_section_label">Conta</string>
    <string name="account_label">Minha Conta</string>
    <string name="logout_label">Sair</string>

    <!-- Descrições de texto dos itens do menu lateral -->
    <string name="home_description">Navegar para a Página Inicial</string>
    <string name="promotions_description">Navegar para as Promoções</string>
    <string name="orders_description">Navegar para Meus Pedidos</string>
    <string name="cart_description">Navegar para Meu Carrinho</string>
    <string name="account_description">Navegar para Minha Conta</string>
    <string name="logout_description">Sair da Conta</string>

</resources>