<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
    android:contentDescription="@string/product_image_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="24sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewProduct" />

    <TextView
        android:id="@+id/textViewProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_description"
        android:textSize="16sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewProductName" />

    <TextView
        android:id="@+id/textViewProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewProductDescription" />

    <Button
        android:id="@+id/buttonAddToCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewProductPrice" />

    <Button
        android:id="@+id/buttonAddToFavorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favorites"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddToCart" />

</androidx.constraintlayout.widget.ConstraintLayout>
